Put soluciones
